--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Kling AI SaaS Clone</title>
+<title>Google AI Studio - Image AI Generator</title>
 <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
 </head>
 <body class="bg-gray-900 text-white">
 
 <div class="max-w-4xl mx-auto p-8">
-    <h1 class="text-4xl font-bold mb-6 text-center">🔥 AI Image → Video Generator</h1>
+    <h1 class="text-4xl font-bold mb-6 text-center">🔥 Google AI Studio Image Generator</h1>
 
     <div class="bg-gray-800 p-6 rounded-2xl shadow-xl space-y-4">
 
@@ -21,80 +21,79 @@
 
         <div>
             <label class="block mb-2">Prompt</label>
-            <input type="text" id="prompt" placeholder="Example: cinematic drone shot, realistic motion"
+            <input type="text" id="prompt" placeholder="Example: Turn this into cinematic scene"
                    class="w-full p-2 text-black rounded">
         </div>
 
         <div>
-            <label class="block mb-2">Motion Style</label>
-            <select id="motion" class="w-full p-2 text-black rounded">
-                <option value="cinematic">Cinematic</option>
-                <option value="drone">Drone</option>
-                <option value="zoom">Zoom In</option>
-                <option value="pan">Camera Pan</option>
-                <option value="slowmo">Slow Motion</option>
-            </select>
-        </div>
-
-        <div>
-            <label class="block mb-2">Runway API Key</label>
-            <input type="text" id="apiKey" placeholder="Paste your Runway API Key"
+            <label class="block mb-2">Google AI Studio API Key</label>
+            <input type="text" id="apiKey" placeholder="Paste your Google API Key"
                    class="w-full p-2 text-black rounded">
         </div>
 
-        <button onclick="generateVideo()"
+        <button onclick="generate()"
                 class="w-full bg-blue-600 hover:bg-blue-700 p-3 rounded-xl font-bold">
-            Generate Video
+            Generate
         </button>
 
         <div id="status" class="text-yellow-400 mt-4"></div>
 
-        <video id="resultVideo" controls class="mt-4 w-full hidden rounded-xl"></video>
+        <pre id="result" class="bg-black p-4 rounded mt-4 overflow-auto"></pre>
     </div>
 </div>
 
 <script>
-async function generateVideo() {
+async function generate() {
     const file = document.getElementById("imageInput").files[0];
     const prompt = document.getElementById("prompt").value;
-    const motion = document.getElementById("motion").value;
     const apiKey = document.getElementById("apiKey").value;
     const status = document.getElementById("status");
-    const resultVideo = document.getElementById("resultVideo");
+    const resultBox = document.getElementById("result");
 
     if (!file || !prompt || !apiKey) {
         alert("Please fill all fields");
         return;
     }
 
-    status.innerText = "Uploading image...";
+    status.innerText = "Processing with Google AI...";
+    resultBox.innerText = "";
 
-    const base64 = await toBase64(file);
-
-    status.innerText = "Generating video... Please wait...";
+    const base64Image = await toBase64(file);
 
     try {
-        const response = await fetch("https://api.runwayml.com/v1/video", {
-            method: "POST",
-            headers: {
-                "Content-Type": "application/json",
-                "Authorization": "Bearer " + apiKey
-            },
-            body: JSON.stringify({
-                prompt: prompt,
-                motion: motion,
-                image: base64
-            })
-        });
+        const response = await fetch(
+            "https://generativelanguage.googleapis.com/v1beta/models/gemini-1.5-flash:generateContent?key=" + apiKey,
+            {
+                method: "POST",
+                headers: {
+                    "Content-Type": "application/json"
+                },
+                body: JSON.stringify({
+                    contents: [
+                        {
+                            parts: [
+                                { text: prompt },
+                                {
+                                    inlineData: {
+                                        mimeType: file.type,
+                                        data: base64Image
+                                    }
+                                }
+                            ]
+                        }
+                    ]
+                })
+            }
+        );
 
         const data = await response.json();
 
-        if (data.videoUrl) {
-            resultVideo.src = data.videoUrl;
-            resultVideo.classList.remove("hidden");
-            status.innerText = "✅ Video Generated!";
+        if (data.candidates && data.candidates.length > 0) {
+            resultBox.innerText = data.candidates[0].content.parts[0].text;
+            status.innerText = "✅ Done!";
         } else {
-            status.innerText = "⚠️ API Response: " + JSON.stringify(data);
+            resultBox.innerText = JSON.stringify(data, null, 2);
+            status.innerText = "⚠️ No result returned.";
         }
 
     } catch (error) {
